bugfix/ content shift on load

--- a/src/style.scss
+++ b/src/style.scss
@@ -18,9 +18,11 @@
 body {
   margin: 0;
   display: flex;
+  flex-direction: column;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100vh;
+  height: 100dvh;
 }
 
 button {
@@ -51,6 +53,7 @@ main {
 
 #app {
   width: 100%;
+  flex: 1;
 }
 
 [data-theme="dark"] {
